--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,10 @@ serde_json = "^1.0"
 "quick-error"="~1"
 "scoped-pool" = "~1"
 clap = "^2"
-hyper="^0.9"
+hyper="^0.11"
+tokio-core="^0.1"
+tokio-io="^0.1"
+futures="^0.1"
 regex="^0.1"
-liquid="^0.8"
+liquid="^0.10"
 multipart="^0.8"
-
