Migrate to slog crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,8 @@ regex="^0.1"
 liquid="^0.10"
 multipart="^0.8"
 num_cpus="^1"
+slog="^2.0"
+slog-json="^2.0"
+slog-term="^2.2"
+slog-async="^2.1"
+slog-scope="^4.0"
